修改了检索烂

--- a/index/index.css
+++ b/index/index.css
@@ -79,6 +79,7 @@ body {
 
   .indexContainer>div {
     background-color: antiquewhite;
+    border-radius: 10px;
     width: 100%;
     height: 100%;
     padding-top: 2vh;
