添加了登录注册界面

--- a/index/index.css
+++ b/index/index.css
@@ -162,6 +162,16 @@ body {
     margin-bottom: 1vh;
   }
 
+  .navigationContainer button:nth-child(3) {
+    width: auto;
+    height: 4vh;
+    float: right;
+    font-size: 0.6rem;
+    margin-right: 3vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+  }
+
   /* 头部容器样式 */
   .headContainer {
     display: inline-block;
