--- a/index/index.css
+++ b/index/index.css
@@ -18,13 +18,13 @@ body {
   .navigationContainer {
     display: inline-block;
     background-color: rgb(255, 255, 255);
-    height: 7vh;
+    min-height: 7vh;
     width: 100vw;
   }
 
   .navigationContainer button:nth-child(1) {
     width: 10vw;
-    height: 5vh;
+    min-height: 5vh;
     font-size: 1.2rem;
     margin-left: 5vw;
     margin-top: 1vh;
@@ -33,7 +33,7 @@ body {
 
   .navigationContainer button:nth-child(2) {
     width: 10vw;
-    height: 5vh;
+    min-height: 5vh;
     font-size: 1.2rem;
     margin-left: 3vw;
     margin-top: 1vh;
@@ -42,7 +42,7 @@ body {
 
   .navigationContainer button:nth-child(3) {
     width: auto;
-    height: 5vh;
+    min-height: 5vh;
     float: right;
     font-size: 1.2rem;
     margin-right: 3vw;
@@ -53,9 +53,13 @@ body {
   /* 头部容器样式 */
   .headContainer {
     display: inline-block;
-    background-color: rgb(255, 26, 26);
-    height: 25vh;
+    height: auto;
     width: 100vw;
+  }
+
+  .headContainer img {
+    width: 100%;
+    height: auto;
   }
 
   /* 检索表容器样式 */
@@ -84,6 +88,7 @@ body {
   /* 左侧大容器 */
   .leftContainer {
     display: inline-block;
+    position: absolute;
     background-color: rgb(255, 223, 182);
     height: 100vh;
     width: 60vw;
@@ -94,20 +99,19 @@ body {
   .leftCarouselImgBox {
     background-color: rgb(197, 228, 255);
     /* 16:9 */
-    width: 56vw;
-    height: 31.5vw;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    width: 60vw;
+    height: 33.75vw;
   }
 
   /* 右侧大容器 */
   .rightContainer {
     display: inline-block;
+    float: right;
     background-color: rgb(255, 223, 182);
     height: 100vh;
     width: 27vw;
     margin-left: 3vw;
-    margin-right: auto;
+    margin-right: 5vw;
   }
 
   /* 宫格布局 */
@@ -146,7 +150,7 @@ body {
 
   .navigationContainer button:nth-child(1) {
     width: auto;
-    height: 4vh;
+    min-height: 4vh;
     font-size: 0.6rem;
     margin-left: 2vw;
     margin-top: 1vh;
@@ -155,7 +159,7 @@ body {
 
   .navigationContainer button:nth-child(2) {
     width: auto;
-    height: 4vh;
+    min-height: 4vh;
     font-size: 0.6rem;
     margin-left: 3vw;
     margin-top: 1vh;
@@ -164,7 +168,7 @@ body {
 
   .navigationContainer button:nth-child(3) {
     width: auto;
-    height: 4vh;
+    min-height: 4vh;
     float: right;
     font-size: 0.6rem;
     margin-right: 3vw;
@@ -176,8 +180,13 @@ body {
   .headContainer {
     display: inline-block;
     background-color: red;
-    height: 25vh;
+    height: auto;
     width: 100vw;
+  }
+
+  .headContainer img {
+    max-width: 100%;
+    height: auto;
   }
 
   /* 检索表容器样式 */
