--- a/index/index.css
+++ b/index/index.css
@@ -105,7 +105,7 @@ body {
 
   /* 右侧大容器 */
   .rightContainer {
-    display: inline-block;
+    display: block;
     float: right;
     background-color: rgb(255, 223, 182);
     height: 100vh;
