--- a/index/index.css
+++ b/index/index.css
@@ -30,6 +30,13 @@ body {
     width: 100vw;
   }
 
+  .navigationContainer input {
+    display: inline-block;
+    margin-left: 13vw;
+    width: 40vw;
+    height: 5vh;
+  }
+
   .navigationContainer button:nth-child(1) {
     width: 10vw;
     min-height: 5vh;
@@ -52,7 +59,7 @@ body {
     transform: scale(1.1);
   }
 
-  .navigationContainer button:nth-child(2) {
+  .navigationContainer button:nth-child(3) {
     width: auto;
     min-height: 5vh;
     float: right;
@@ -67,7 +74,7 @@ body {
     transition: 0.3s;
   }
 
-  .navigationContainer button:nth-child(2):hover {
+  .navigationContainer button:nth-child(3):hover {
     background-color: rgb(202, 244, 255);
     border-color: #b0b0b0;
     color: rgb(0, 0, 0);
@@ -158,6 +165,28 @@ body {
     margin-left: 5vw;
     margin-right: 5vw;
     backdrop-filter: blur(5px);
+  }
+
+  .newsHead {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding-top: 1.5vh;
+    padding-left: 2vw;
+  }
+
+  .newsHead p {
+    font-size: 2rem;
+    color: rgb(77, 77, 77);
+    font-family: 宋体;
+  }
+
+  .splitLine {
+    box-sizing: border-box;
+    width: 100%;
+    height: 2px;
+    background-color: #e0b34b;
   }
 
   /* 宫格布局 */
