--- a/index/index.css
+++ b/index/index.css
@@ -27,7 +27,7 @@ body {
     display: inline-block;
     background-color: rgba(255, 255, 255, 0);
     min-height: 7vh;
-    width: 100vw;
+    width: 100%;
   }
 
   .navigationContainer input {
@@ -86,7 +86,7 @@ body {
   .headContainer {
     display: inline-block;
     height: auto;
-    width: 100vw;
+    width: 100%;
   }
 
   .headContainer img {
@@ -100,7 +100,7 @@ body {
     box-sizing: border-box;
     background-color: rgba(255, 255, 255, 0);
     height: auto;
-    width: 100vw;
+    width: 100%;
     padding-left: 20vw;
     padding-right: 20vw;
     padding-top: 0vh;
@@ -123,9 +123,9 @@ body {
     display: inline-block;
     position: absolute;
     background-color: rgba(255, 223, 182, 0);
-    height: 100vh;
-    width: 52vw;
-    margin-left: 9vw;
+    height: auto;
+    width: 52%;
+    margin-left: 9%;
   }
 
   /* 小图片盒子 */
@@ -135,8 +135,8 @@ body {
     background-size: 20vw 26vh;
     width: 20vw;
     height: 26vh;
-    margin-left: 3.1vw;
-    margin-right: 2.6vw;
+    margin-left: 3.1%;
+    margin-right: 2.6%;
     margin-top: 8vh;
     margin-bottom: 2vh;
     transition: 0.3s;
@@ -160,8 +160,8 @@ body {
     display: block;
     float: right;
     background-color: rgba(255, 223, 182, 0.196);
-    height: 100vh;
-    width: 27vw;
+    height: 117vh;
+    width: 27%;
     margin-left: 5vw;
     margin-right: 5vw;
     backdrop-filter: blur(5px);
@@ -213,7 +213,7 @@ body {
   /* 宫格布局 */
   .indexGrid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 0vw;
     justify-content: center;
   }
@@ -228,6 +228,103 @@ body {
     text-decoration: underline;
     transition: 0.2s;
     transform: scale(1.2);
+  }
+
+  /* 3D图片廊 */
+  .carouselContainer {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+
+  div#carousel {
+    perspective: 80rem;
+    padding-top: 20%;
+    font-size: 0;
+    margin-bottom: 3rem;
+    overflow: hidden;
+  }
+
+  figure#spinner {
+    transform-style: preserve-3d;
+    height: 50vh;
+    transform-origin: 51% 50% -31.5rem;
+    transition: 1s;
+  }
+
+  figure#spinner img {
+    width: 16vw;
+    max-width: 16vw;
+    position: absolute;
+    left: 40%;
+    transform-origin: 50% 50% -500px;
+    outline: 1px solid transparent;
+  }
+
+  figure#spinner img:nth-child(1) {
+    transform: rotateY(0deg);
+  }
+
+  figure#spinner img:nth-child(2) {
+    transform: rotateY(-40deg);
+  }
+
+  figure#spinner img:nth-child(3) {
+    transform: rotateY(-80deg);
+  }
+
+  figure#spinner img:nth-child(4) {
+    transform: rotateY(-120deg);
+  }
+
+  figure#spinner img:nth-child(5) {
+    transform: rotateY(-160deg);
+  }
+
+  figure#spinner img:nth-child(6) {
+    transform: rotateY(-200deg);
+  }
+
+  figure#spinner img:nth-child(7) {
+    transform: rotateY(-240deg);
+  }
+
+  figure#spinner img:nth-child(8) {
+    transform: rotateY(-280deg);
+  }
+
+  figure#spinner img:nth-child(9) {
+    transform: rotateY(-320deg);
+  }
+
+  div#carousel~span {
+    color: black;
+    margin: 5%;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    transition: 0.6s color;
+    position: relative;
+    margin-top: -15rem;
+    border-bottom: none;
+    line-height: 0;
+  }
+
+  div#carousel~span:hover {
+    color: #888;
+    cursor: pointer;
+  }
+
+  /* 页脚 */
+  .footContainer {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 12vh;
+    background-color: #f3f3f3ac;
   }
 }
 
