--- a/news-2/news-2.css
+++ b/news-2/news-2.css
@@ -124,3 +124,98 @@ body {
     transition: 0.03s;
   }
 }
+
+@media screen and (max-width:480px) {
+
+  .background-image {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -2;
+    background-image: url(../image/背景素材1.jpg);
+  }
+
+  /*桌面浏览器所显示的网页CSS*/
+  /* 导航栏容器样式 */
+  .navigationContainer {
+    background-color: rgba(255, 255, 255, 0);
+    min-height: 7vh;
+    width: 100vw;
+  }
+
+  .navigationContainer input {
+    display: inline-block;
+    margin-left: 15vw;
+    width: 60vw;
+    height: 5vh;
+  }
+
+  .navigationContainer button:nth-child(1) {
+    display: none;
+  }
+
+  .navigationContainer button:nth-child(3) {
+    width: auto;
+    min-height: 5vh;
+    float: right;
+    font-size: 0.6rem;
+    margin-right: 3vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    background-color: rgb(224, 49, 49);
+    border-color: #fdf200;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    transition: 0.3s;
+  }
+
+  .textContainer {
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100vw;
+    height: auto;
+    padding-top: 5vh;
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+
+  .gaussianBlur {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.41);
+    backdrop-filter: blur(10px);
+    padding-bottom: 10vh;
+  }
+
+  .gaussianBlur h1 {
+    text-align: center;
+  }
+
+  .headBox {
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
+
+  .textBox {
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    padding-left: 10vw;
+    padding-right: 10vw;
+  }
+
+  .textContainer h1 {
+    font-size: 1.5rem;
+    margin: 0px;
+  }
+
+  .textContainer p {
+    font-size: 0.6rem;
+    line-height: 4vh;
+    transition: 0.3s;
+  }
+}
