--- a/index/index.css
+++ b/index/index.css
@@ -132,13 +132,13 @@ body {
   .imgBox {
     display: inline-block;
     box-sizing: border-box;
-    background-size: 20vw 26vh;
-    width: 20vw;
-    height: 26vh;
-    margin-left: 3.1%;
-    margin-right: 2.6%;
-    margin-top: 8vh;
-    margin-bottom: 2vh;
+    background-size: 22vw 16vw;
+    width: 22vw;
+    height: 16vw;
+    margin-left: 2.6vw;
+    margin-right: 0vw;
+    margin-top: 2vw;
+    margin-bottom: 1vw;
     transition: 0.3s;
   }
 
@@ -420,8 +420,8 @@ body {
     display: inline-block;
     box-sizing: border-box;
     background-size: 40vw 30vw;
-    min-width: 40vw;
-    min-height: 30vw;
+    width: 40vw;
+    height: 30vw;
     margin-left: 5%;
     margin-right: 2.6%;
     margin-top: 4vh;
