--- a/index/index.css
+++ b/index/index.css
@@ -38,7 +38,7 @@ body {
   }
 
   .navigationContainer button:nth-child(1) {
-    width: 10vw;
+    min-width: 10vw;
     min-height: 5vh;
     font-size: 1.2rem;
     margin-left: 5vw;
